# pytorchSINDySz

./: check_hilbert.py  datasets.py  main.py  model.py  pyproject.toml  scratchpad.ipynb
lightning_logs/shallow_fan/lightning_logs/version_2/: metrics.csv
lightning_logs/shallow_fan/lightning_logs/version_4/: metrics.csv
lightning_logs/shallow_fan/lightning_logs/version_5/: metrics.csv
lightning_logs/shallow_fan/lightning_logs/version_6/: metrics.csv
lightning_logs/shallow_fan/lightning_logs/version_6/checkpoints/: epoch=0-step=71.ckpt
lightning_logs/shallow_fan/lightning_logs/version_7/: metrics.csv
lightning_logs/version_3/: metrics.csv
lightning_logs/version_3/checkpoints/: epoch=5-step=426.ckpt
lightning_logs/version_4/: metrics.csv
lightning_logs/version_4/checkpoints/: epoch=4-step=355.ckpt
lightning_logs/version_5/: metrics.csv
lightning_logs/version_5/checkpoints/: epoch=4-step=355.ckpt
lightning_logs/version_6/: metrics.csv
lightning_logs/version_6/checkpoints/: epoch=4-step=355.ckpt
lightning_logs/version_7/: metrics.csv
lightning_logs/version_7/checkpoints/: epoch=9-step=710.ckpt
