[project]
name = "pytorchsindysz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.15.1",
    "lightning>=2.2.5",
    "matplotlib>=3.10.8",
    "numpy==1.23.4",
    "pandas>=2.1.0",
    "scipy>=1.13.1",
    "setuptools==80.0.0",
    "torch==1.13.1",
    "tqdm>=4.67.3",
]
